--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "0.0.0-f6b8d31a7",
     "react-hook-form": "^3.26.4",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "semantic-ui-react": "^0.88.1"
