--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "0.0.0-f6b8d31a7",
     "react-dom": "0.0.0-f6b8d31a7",
     "react-hook-form": "^3.26.4",
@@ -10,6 +11,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
